# vision-desktop-automation

./: .gitignore  README.md  Refactor_NOTES.md  pyproject.toml  run_gui.bat
.claude/: settings.local.json
src/vision_desktop_automation/: api.py  config.py  desktop.py  files.py  geometry.py  grounding.py  launcher.py  main.py  main.py.txt  notepad.py  notifications.py  prompts.py  template_matching.py  vlm_client.py
src/vision_desktop_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_grounding.py  test_notepad_windows.py  test_vlm_client.py
